# deep-agent-demo

./: .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/commands/: changelog-generator.md  lint.md  security-hardening.md  test.md
.claude/skills/writing-skills/: anthropic-best-practices.md
.codex/: hooks.json
.codex/agents/: academic-researcher.toml  ai-engineer.toml  code-reviewer.toml  data-scientist.toml  fact-checker.toml  frontend-developer.toml  fullstack-developer.toml  nlp-engineer.toml  research-analyst.toml
.codex/hooks/: post_tool_use_dependency_audit.sh  post_tool_use_notification_log.sh  pre_tool_use_bash_log.sh  pre_tool_use_block_dangerous.sh  stop_python_format.sh  stop_python_mypy.sh
.codex/skills/optimization-gguf/: SKILL.md
.github/skills/finishing-a-development-branch/: SKILL.md
.github/skills/optimization-gguf/references/: troubleshooting.md
.github/skills/using-git-worktrees/: SKILL.md
.github/skills/writing-plans/: SKILL.md
blackboard/local-user/real-thread/real-run/: critique.md  decisions.md  goal.md  mcp-log.md  memory-proposals.md  open-questions.md  plan.md  state-summary.md  synthesis.md  trace.md
docs/plans/: 2026-04-17-blackboard-demo-design.md
skills/common/: SKILL.md
skills/critic/: SKILL.md
skills/planner/: SKILL.md
skills/synthesizer/: SKILL.md
src/deep_agent_demo/: __init__.py  app.py  mcp_server.py  runtime.py  service.py
src/deep_agent_demo/blackboard/: __init__.py  models.py  rendering.py  settings.py  writer.py
tests/: test_blackboard_domain.py  test_blackboard_freshness.py  test_chat_api.py  test_mcp_and_skills.py  test_real_runtime_path.py  test_run_scoping.py  test_runtime_wiring.py
