[project]
name = "deep-agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.13.0",
    "deepagents>=0.5.3",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "langchain-openai>=1.1.14",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
]

[project.scripts]
deep-agent-demo = "deep_agent_demo:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
